infra/k8s/preview/site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      imagePullSecrets:
        - name: scaleway-registry
      containers:
        - name: site
          image: ${IMAGE}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
