infra/k8s/preview/campaign-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campaign
  namespace: ${NAMESPACE}
spec:
  selector:
    app: campaign
  ports:
    - port: 3000
      targetPort: 3000
