infra/k8s/preview/site-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: ${NAMESPACE}
spec:
  selector:
    app: site
  ports:
    - port: 80
      targetPort: 80
